# NvWinTop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: gpu_monitor.hpp  graph_renderer.hpp  window.hpp
res/: combine_icons.ps1  resource.h  resource.rc
src/: gpu_monitor.cpp  graph_renderer.cpp  main.cpp  window.cpp
